# warthog-config

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  update-description-topics.yml
config/: 75-thrustmaster-warthog.rules
src/: main.rs  usb.rs  warthog.rs
