[package]
name = "warthog-config"
version = "0.1.0"
authors = ["Alexis Jeandeau <alexis.jeandeau@gmail.com>"]
edition = "2018"

[dependencies]
rusb = "0.8"
byteorder = "1.4"
bitflags = "1.2"

[profile.release]
# Optimize for size
opt-level = 'z'
# Enable Link Time Optimization
lto = true
# Reduce parallel code generation units to increase optimization
codegen-units = 1
