[package]
name = "warthog-config"
version = "0.1.0"
description = "Command-line tool that can be used to control the LEDs of a Thrustmaster HOTAS Warthog throttle."
keywords = ["thrustmaster", "hotas", "warthog", "warthog-hotas"]
categories = ["command-line-utilities"]
authors = ["Alexis Jeandeau <alexis.jeandeau@gmail.com>"]
edition = "2021"
repository = "https://github.com/jeandeaual/warthog-config"
license = "MIT"

[dependencies]
rusb = "0.9"
byteorder = "1.4"
bitflags = "1.3"
regex = "1"

[dependencies.clap]
version = "3.0.0-rc.7"
default-features = false
features = ["std", "cargo", "regex", "wrap_help"]

[profile.release]
# Optimize for size
opt-level = "z"
# Enable Link Time Optimization
lto = true
# Reduce parallel code generation units to increase optimization
codegen-units = 1
